# NUMmodel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NUMmodel.mdproj  NUMmodel.sln  README.md  baserunWatercolumn.m  cmake_install.cmake  install_manifest.txt  plotSimulationTest.m  plotWatercolumnTimeTest.m  plotWatercolumntest.m  testChemostatSeasonal.m  todo.txt
Fortran/: .#makefile  .NUMmodel.f90.swp  CMakeLists.txt  Generalists.f90  Globals.f90  Makefile  NUMmodel  NUMmodel.f90  NUMmodel.f90.bak  NUMmodel2.code-workspace  NUMmodel2.f90  NUMmodel_old.f90  NUMmodel_wrap_R.f90  NUMmodel_wrap_colmajor.f90  NUMmodel_wrap_colmajor.f90.bak  NUMmodel_wrap_colmajor4matlab.h  NUMmodeltest  NUMmodeltest.f90  POM.f90  POM.f90.bak  README.md  cmake_install.cmake  compile.sh  compile_so.sh  copepodSpecies.f90  copepods.f90  copepods.f90.bak  debug.f90  diatoms.f90  diatoms.f90.bak  diatoms_simple.f90  diatoms_simple.f90.bak  f_calcderivatives__genmod.f90  f_getrates__genmod.f90  f_setupgeneralistsonly__genmod.f90  gelatinous.f90  gelatinuos.f90  generalists.f90  generalists_csp.f90  generalists_simple.f90  (+18 more)
R/: .gitignore  README.md  analytics.html  app.R  basetools.R  model.R  modelChemostat.R
TMs/: MITgcm_ECCO_N0.mat  MITgcm_N0.mat  README.md  globalInitMITgcm.mat
input/: input.h  input.nlm  input.nlm.bak  input.yaml  input_generalists_simpleX.asv  input_generalists_simpleX.h  input_generalists_simpleX_10groups.h  input_generalists_simpleX_1group_Startup.h  input_generalists_simpleX_ManyGroups.h  input_orig.h  input_orig.nlm  input_parameter_headers.mat  search_namelist.m
lib/: README.md  libNUMmodel_R.dylib  libNUMmodel_matlab.dylib
matlab/: Bchl_size.asv  Bchl_size.m  CheckSensitivity_paramRemin2.m  EXTRACT_files_NPP_latlon.m  EXTRACT_files_NPP_latlonCAFEonly.m  EvaluateRun.m  EvaluateRun00.m  Final_Figures.m  Function_of_WatercolumnDiagnostics_and_Plots.asv  Function_of_WatercolumnDiagnostics_and_Plots.m  KensNewPlot.asv  KensNewPlot.m  NPP_extracted.mat  NPP_extracted60_15W.mat  NPP_extracted_05S05E.mat  NPP_extracted_0_172W.mat  NPP_extracted_HOT.mat  NPP_extracted_N60W40.mat  NPP_extracted_seasonal.mat  NUM_size_07.m  NewplotsCamilaWaterColumnTime.m  NorthAtlantic_WC.m  PicoNanoMicroBarplots.m  SENSITIVITY_mortHTL_SinkingPOM.asv  SENSITIVITY_mortHTL_SinkingPOM.m  SENSITIVITY_remin2.asv  SENSITIVITY_remin2.m  Sensitivity3x3.m  Sensitivity_1fracHTL.m  Sensitivity_1param.m  Sensitivity_mortHTL.m  Sensitivity_paramRemin2.asv  Sensitivity_reminPOM.m  (+411 more)
(+171 files in other folders)
